# Atom3D

./: .gitignore  CMakeLists.txt  makefile
include/: AllocatedBuffer.hpp  App.hpp  Mesh.hpp  Scene.hpp  Vertex.hpp  test.hpp
src/: App.cpp  Scene.cpp  VkBootstrap.cpp  main.cpp
src/shaders/: shader.vert
